Added shuffling of the questions

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -13,7 +13,7 @@
         <div id="landing-container">
             <div id="landing-header">
                 <h1>MVP Quiz</h1>
-                <p class="subtitle">Esti gata de examen?</p>
+                <p class="subtitle">By Popa Marian-Iulian</p>
             </div>
             
             <div id="landing-content">
