Actual MVP Quiz app
Added all the questions I could find in the questions.json.
Added a category selector.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -21,8 +21,11 @@
                     <div class="quiz-info">
                         <div class="info-item">
                             <span class="info-icon">📝</span>
-                            <span class="info-text">Total Questions:</span>
-                            <span id="total-questions">Loading questions...</span>
+                            <div class="category-selector">
+                                <button id="prev-category-btn" class="category-nav-btn">‹</button>
+                                <span id="category-info">Loading categories...</span>
+                                <button id="next-category-btn" class="category-nav-btn">›</button>
+                            </div>
                         </div>
                     </div>
                     
